--- a/client/package.json
+++ b/client/package.json
@@ -9,17 +9,21 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "node-sass": "^4.13.1",
+    "query-string": "^6.11.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-emoji": "^0.5.0",
     "react-hook-form": "^5.0.3",
     "react-icons": "^3.9.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-scroll-to-bottom": "^1.3.2",
     "react-select": "^3.0.8",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "socket.io-client": "^2.3.0",
     "yup": "^0.28.3"
   },
   "scripts": {
