--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.38",
+    "@types/react-dom": "^16.9.8",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "node-sass": "^4.13.1",
@@ -24,6 +28,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "socket.io-client": "^2.3.0",
+    "typescript": "^3.9.5",
     "yup": "^0.28.3"
   },
   "scripts": {
